yaml/app/networking/service-browse-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-browse-controller
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: ecom-browse-controller
