yaml/app/networking/service-cookie-setter.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cookie-setter
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ecom-cookie-setter
