yaml/app/networking/service-home.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-home
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ecom-home
