yaml/app/networking/service-onesite-components.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-onesite-components
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ecom-onesite-components
