yaml/app/networking/service-optimizely-cdn.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-optimizely-cdn
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ecom-optimizely-cdn
