yaml/app/networking/service-user-segmenter.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user-segmenter
  namespace: ecom
  labels:
    app: ecom
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: ecom-user-segmenter
