yaml/app/networking/virtual-service-home.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-home
spec:
  hosts:
  - "*"
  gateways:
   - gateway-home
  http:

  - match:
    - headers:
        cookie:
          regex: (^|.*;\s)unknownShopperId=.* 
      uri:
          prefix: /browse/home.do
    route:
     - destination:
         host: service-home.ecom.svc.cluster.local
         port:
           number: 8080

  - match:
    - headers:
        cookie:
          regex: (^|.*;\s)unknownShopperId=.* 
      uri:
          exact: /
    rewrite:
      uri: /browse/home.do
    route:
     - destination:
         host: service-home.ecom.svc.cluster.local
         port:
           number: 8080
  - route:
      - destination:
          host: service-cookie-setter.ecom.svc.cluster.local
          port:
            number: 8080
